# lisco

./: Makefile.am  Makefile.in  README-hacking  README.md  aclocal.m4  bootstrap.conf  config.h.in  configure  configure.ac
lib/: Makefile.am
libchi/: Makefile.am  apply_move.c  char2figurine.c  check_legality.c  clear_position.c  closest_prime.c  coordinate_notation.c  coords2label.c  dump-bitboard.c  dump_pieces.c  fen.c  free.c  game_over.c  genmasks.c  illegal_move.c  init_position.c  legal_moves.c  libchi.h.in  make_move.c  mm_init.c  movegen.c  movegen_color.c  parse_epd.c  parse_fen_position.c  parse_move.c  piece2char.c  print_move.c  see.c  set_position.c  shift2label.c  showfen.c  strerror.c  stringbuf.c  stringbuf.h  unapply_move.c  unmake_move.c  update_material.c  zk_change_side.c  zk_finish.c  zk_init.c  (+2 more)
libchi/tests/: Makefile.am  check_libchi.c  generate_legal_moves_test.pl  pgn2test.pl  test_coordinate_notation.c  test_fen.c  test_game_over.c  test_legal_moves.c  test_move_making.c  test_move_making_pgn.c  test_parsers.c  test_presentation.c  test_see.c
libnu/: Makefile.am  chi-internal.h  nu.h
libnu/tests/: Makefile.am  check_libchi.c
src/: Makefile.am  basename.h  board.c  board.h  display-board.c  display-board.h  epd.c  ev_hash.c  evaluate.c  initialize.c  lisco.c  lisco.h  liscoplay.c  log.c  log.h  move-list.c  move-selector.c  perft.c  qtt_hash.c  quiescence.c  rtime.c  think.c  three-fold.h  time-control.c  transposition-table.c  tt_hash.c  uci-engine.c  uci-engine.h  util.c  util.h  xboard-feature.c  xboard-feature.h  xmalloca-debug.h
(+19 files in other folders)
